# URL_Shortener

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
helm/postgres/: values.yaml
helm/postgres/templates/: configmap.yaml  deployment.yaml  secret.yaml
helm/url-shortener/: values.yaml
helm/url-shortener/templates/: NOTES.txt  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
src/app/: main.py
src/app/api/: middlewares.py  schemas.py  technical_router.py  url_router.py
src/app/config/: config_api.py
src/app/logic/: generators_short_url.py
src/data_base/config/: config.py
src/data_base/connections/: connections.py
src/data_base/models/: __init__.py  base.py  url_mapping.py
src/data_base/repositories/: url_mapping.py
src/migrations/: env.py
src/migrations/versions/: 00001_url_mapping__creaded.py
src/tests/: conftest.py  tests_config.py
src/tests/integration/app/: test_technical_router.py  test_url_router.py
src/tests/integration/data_base/repositories/: test_url_mapping.py
src/tests/unit/app/logic/: test_generators_short_url.py
swagger/: openapi.json
tools/: preparing_db.sql
tools/client_imitation/: client_imitation.py
